Adding 2 jupyter notebooks on parameter dependency on T and adimensionning of equations

--- a/pyheatmy/research/demo_H_strat_zhanJING.ipynb
+++ b/pyheatmy/research/demo_H_strat_zhanJING.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# correction du modèle stratifié Zhan JING"
+    "# correction du modèle stratifié \n",
+    "Zhan JING, MOLONARI 2023"
    ]
   },
   {
