pyheatmy, all global parameters, that are written in capital are now in config.py. Should be informed with all default values, such as the number of seconds in hour, etc.....

--- a/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "MOLONARI 2022 créé par Guillaume de Rochefort\n",
     "\n",
-    "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR.\n",
+    "L'objet de cette démo est de présenter une classe chargée de générer une simulation des données des capteurs de pression et de température dans le cas où l'on ne disposerait pas de données issues du projet CAPTEUR. Based on the ``Time_series`` class in ``gen_test.py``\n",
     "\n",
     "Nous montrerons l'objet Time_Series qui permet de générer des jeux de données purements périodique avec possibilité de bruit gaussien. Nous illustrerons l'interaction de Time_series avec la classe Column et la classe layer. \n",
     "\n",
