--- a/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "MOLONARI 2022 créé par Guillaume de Rochefort\n",
     "\n",
-    "Ceci est un notebook de démo pour la récupération de valeur de température d'après la solution numérique des équations hydrothermiques."
+    "Ceci est un notebook de démo pour la récupération de valeur de température d'après la solution numérique des équations hydrothermiques. Based on the ``Time_series`` class in ``gen_test.py``"
    ]
   },
   {
