--- a/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "MOLONARI 2022 créé par Guillaume de Rochefort\n",
     "\n",
-    "Ceci est un notebook pour des expériences numériques en différents cas faites avec la maquette. On présente également une méthode d'affichage des caractéristiques de l'objet colonne pour visualiser les résultats des cas tests. \n",
+    "Ceci est un notebook pour des expériences numériques en différents cas faites avec la maquette. On présente également une méthode d'affichage des caractéristiques de l'objet colonne pour visualiser les résultats des cas tests. Based on the ``Time_series`` class in ``gen_test.py``and the ``Analy_Sol`` class in ``val_analy.py``\n",
     "\n",
     "__User friendly :__ Il vous suffit de changer les paramètres des dictionnaires dans les cellules de calcul\n",
     "\n",
