Creation of  demo_ge,Data.ipynb. It  uses the methods of time_series and column classes from core.py and gen_test.py respectively. The global printing function of a column class (col.plot_CALC_results()) is bugged in its display and fluxes calculation

--- a/pyheatmy/research/demo_H_strat_zhanJING.ipynb
+++ b/pyheatmy/research/demo_H_strat_zhanJING.ipynb
@@ -261,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.plot_CALC_results(nt=len(col._times))"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col.plot_CALC_results(nt=len(col._times))"
+    "col.plot_CALC_results()"
    ]
   },
   {
