--- a/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
@@ -61,18 +61,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K_offset = 273.15\n",
-    "\n",
     "t_debut = (2010, 1, 1)\n",
     "t_fin = (2010, 5, 30, 23, 59, 59)\n",
     "dt = 15*60 # pas de temps en (s)\n",
     "\n",
     "T_riv_amp = 1\n",
-    "T_riv_offset = 20 + K_offset\n",
+    "T_riv_offset = 20 + ZERO_CELSIUS\n",
     "P_T_riv = 5*24*4*dt\n",
     "\n",
     "T_aq_amp = 0\n",
-    "T_aq_offset = 12 + K_offset\n",
+    "T_aq_offset = 12 + ZERO_CELSIUS\n",
     "P_T_aq = -9999 # à mettre dans le init\n",
     "\n",
     "dH_amp = 0\n",
@@ -249,7 +247,7 @@
     "col = experiment_monolayer[1]\n",
     "layerlist = [experiment_monolayer[2]]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = nt)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -283,7 +281,7 @@
     "col = experiment_monolayer[1]\n",
     "layerlist = [experiment_monolayer[2]]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -317,7 +315,7 @@
     "col = experiment_monolayer[1]\n",
     "layerlist = [experiment_monolayer[2]]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -351,7 +349,7 @@
     "col = experiment_monolayer[1]\n",
     "layerlist = [experiment_monolayer[2]]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -395,7 +393,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -430,7 +428,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -481,7 +479,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -516,7 +514,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -558,7 +556,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -593,7 +591,7 @@
     "col = experiment_multilayer[1]\n",
     "layerlist = experiment_multilayer[2]\n",
     "time_ser._measures_column_one_layer(col, layerlist, nb_cells)\n",
-    "col.plot_CALC_results(nt = 3000)"
+    "col.plot_CALC_results()"
    ]
   },
   {
@@ -630,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
