partly changes 273.15 in ZERO_CELSIUS

--- a/pyheatmy/research/Note_adimensionnement.ipynb
+++ b/pyheatmy/research/Note_adimensionnement.ipynb
@@ -19,6 +19,7 @@
     "from numpy import linalg as npln\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
+    "from pyheatmy import *\n",
     "\n",
     "plt.rcParams.update({'font.size': 20})\n",
     "plt.style.use('Solarize_Light2')\n",
@@ -846,7 +847,7 @@
     "\n",
     "Temps = np.arange(Nt)*dtau\n",
     "Temps_dim = Temps*P\n",
-    "T_riv_dim_t = 273.15 + 18 + 5*np.sin(2*np.pi*Temps) # + 6*np.sin(2*np.pi*Temps/365)\n",
+    "T_riv_dim_t = ZERO_CELSIUS + 18 + 5*np.sin(2*np.pi*Temps) # + 6*np.sin(2*np.pi*Temps/365)\n",
     "H_riv_dim_t = np.zeros(Nt)\n",
     "H_riv_dim_t[0            : 2*24*4 - 3*4] = H_riv_max\n",
     "H_riv_dim_t[2*24*4 - 3*4 : 2*24*4 + 3*4] = np.linspace(H_riv_max, H_riv_min, 6*4)\n",
