--- a/pyheatmy/research/Tests_dependance_temperature.ipynb
+++ b/pyheatmy/research/Tests_dependance_temperature.ipynb
@@ -19,6 +19,7 @@
     "from numpy import linalg as npln\n",
     "import matplotlib\n",
     "from matplotlib import pyplot as plt\n",
+    "from pyheatmy import *\n",
     "\n",
     "plt.rcParams.update({'font.size': 20})\n",
     "# plt.style.use('classic')\n",
@@ -128,7 +129,7 @@
     "    A       =  2.06084430e-2\n",
     "    B       = -5.41602276e-3\n",
     "    T = np.array(T)\n",
-    "    Tc = 273.15\n",
+    "    Tc = ZERO_CELSIUS\n",
     "    rho_w = rho_w_0 + A*(T-Tc) + B*(T-Tc)**2\n",
     "    return rho_w\n",
     "\n",
@@ -143,7 +144,7 @@
     "    B     = -2.83955125e-2\n",
     "\n",
     "    T  = np.array(T)\n",
-    "    Tc = 273.15\n",
+    "    Tc = ZERO_CELSIUS\n",
     "    C_w = C_w_0 + A*(T-Tc) + B*(T-Tc)**2\n",
     "    return C_w\n"
    ]
@@ -443,7 +444,7 @@
     "    \"\"\"\n",
     "\n",
     "    T_dim  = T*(T_riv - T_nap) + T_nap\n",
-    "    Tc_dim = 273.15 + T*0\n",
+    "    Tc_dim = ZERO_CELSIUS + T*0\n",
     "\n",
     "    rho_m = rho_r*(1-n) + Rho_w(Tc_dim)*n\n",
     "    c_m   = c_r  *(1-n) + C_w  (Tc_dim)*n\n",
@@ -467,7 +468,7 @@
     "    \"\"\"\n",
     "\n",
     "    T_dim  = T*(T_riv - T_nap) + T_nap\n",
-    "    Tc_dim = 273.15 + T*0\n",
+    "    Tc_dim = ZERO_CELSIUS + T*0\n",
     "\n",
     "    rho_m = rho_r*(1-n) + Rho_w(T_dim) *n\n",
     "    c_m   = c_r  *(1-n) + C_w  (Tc_dim)*n\n",
@@ -491,7 +492,7 @@
     "    \"\"\"\n",
     "\n",
     "    T_dim  = T*(T_riv - T_nap) + T_nap\n",
-    "    Tc_dim = 273.15 + T*0\n",
+    "    Tc_dim = ZERO_CELSIUS + T*0\n",
     "\n",
     "    rho_m = rho_r*(1-n) + Rho_w(Tc_dim)*n\n",
     "    c_m   = c_r  *(1-n) + C_w  (T_dim) *n\n",
@@ -1398,7 +1399,7 @@
     "dtau = 15*60 / P\n",
     "Temps = np.arange(Nt)*dtau\n",
     "Temps_dim = Temps*P\n",
-    "T_riv_dim_t = 273.15 + 18 + 5*np.sin(2*np.pi*Temps) + 6*np.sin(2*np.pi*Temps*365)\n",
+    "T_riv_dim_t = ZERO_CELSIUS + 18 + 5*np.sin(2*np.pi*Temps) + 6*np.sin(2*np.pi*Temps*365)\n",
     "H_riv_dim_t = np.zeros(Nt)\n",
     "H_riv_dim_t[0            :  5*24*4 - 3*4] = H_riv_max\n",
     "H_riv_dim_t[5*24*4 - 3*4 :  5*24*4 + 3*4] = np.linspace(H_riv_max, H_riv_min, 6*4)\n",
