--- a/pyheatmy/research/demo_H_strat_zhanJING.ipynb
+++ b/pyheatmy/research/demo_H_strat_zhanJING.ipynb
@@ -129,11 +129,11 @@
     "b = float(etalonage_capteur_riv['P508'][4])\n",
     "capteur_riviere['dH'] = (capteur_riviere['tension'].astype(float)-intercept-capteur_riviere['temperature_riviere'].astype(float)*b)/a\n",
     "# conversion mesures de tempétratures\n",
-    "capteur_riviere['temperature_riviere'] = capteur_riviere['temperature_riviere'] + 273.15\n",
-    "capteur_ZH['temperature_10'] = capteur_ZH['temperature_10'] + 273.15\n",
-    "capteur_ZH['temperature_20'] = capteur_ZH['temperature_20'] + 273.15\n",
-    "capteur_ZH['temperature_30'] = capteur_ZH['temperature_30'] + 273.15\n",
-    "capteur_ZH['temperature_40'] = capteur_ZH['temperature_40'] + 273.15"
+    "capteur_riviere['temperature_riviere'] = capteur_riviere['temperature_riviere'] + ZERO_CELSIUS\n",
+    "capteur_ZH['temperature_10'] = capteur_ZH['temperature_10'] + ZERO_CELSIUS\n",
+    "capteur_ZH['temperature_20'] = capteur_ZH['temperature_20'] + ZERO_CELSIUS\n",
+    "capteur_ZH['temperature_30'] = capteur_ZH['temperature_30'] + ZERO_CELSIUS\n",
+    "capteur_ZH['temperature_40'] = capteur_ZH['temperature_40'] + ZERO_CELSIUS"
    ]
   },
   {
