--- a/pyheatmy/research/propag_norm.ipynb
+++ b/pyheatmy/research/propag_norm.ipynb
@@ -23,6 +23,8 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "from pyheatmy import *\n",
+    "\n",
     "class Stallman:\n",
     "\n",
     "    def __init__(self,dH,K,cw,rhow,lambm,crhom,P,thamp,thmu,Z,T,err_H):\n",
@@ -122,7 +124,7 @@
     "lambm, lambw = 1, 0.6\n",
     "crhom = 4*10**6\n",
     "P = 24*365*3600\n",
-    "thmu, thamp = 273.15+12.5, 12\n",
+    "thmu, thamp = ZERO_CELSIUS+12.5, 12\n",
     "err_H = 0.045*dH\n",
     "\n",
     "Z = np.linspace(0,h,N)\n",
