--- a/pyheatmy/research/temps_remanence.ipynb
+++ b/pyheatmy/research/temps_remanence.ipynb
@@ -19,7 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.cm import ScalarMappable\n",
     "from matplotlib.colors import Normalize\n",
-    "import scipy.sparse.linalg as sci"
+    "import scipy.sparse.linalg as sci\n",
+    "from pyheatmy import *"
    ]
   },
   {
@@ -167,7 +168,7 @@
     "crhom = 4*10**6\n",
     "days = 1\n",
     "P = days*24*3600\n",
-    "thmu, thamp = 273.15+12, 1"
+    "thmu, thamp = ZERO_CELSIUS+12, 1"
    ]
   },
   {
@@ -233,8 +234,8 @@
    "outputs": [],
    "source": [
     "L_K = [10**(-4),10**(-6),10**(-8)]\n",
-    "Triv = 20 + 273.15\n",
-    "Tnap = 10 + 273.15\n",
+    "Triv = 20 + ZERO_CELSIUS\n",
+    "Tnap = 10 + ZERO_CELSIUS\n",
     "Z = [(k/50) for k in range(N)]\n",
     "\n",
     "for K in L_K:\n",
@@ -619,8 +620,8 @@
     "lambw, lambs = 0.6, 3\n",
     "n = 0.2\n",
     "k, g, muw, deltH = 10**(-12), 10, 10**(-3), 0.25\n",
-    "Triv = lambda t : 20 + 273.15\n",
-    "Tnap = lambda t : 10 + 273.15\n",
+    "Triv = lambda t : 20 + ZERO_CELSIUS\n",
+    "Tnap = lambda t : 10 + ZERO_CELSIUS\n",
     "\n",
     "CAM = CAMatrix(N,h,rhow,rhos,cw,cs,g,lambs,lambw,n,k,muw,deltH,Triv,Tnap)\n",
     "CAM.make_A()\n",
@@ -898,8 +899,8 @@
     "lambw, lambs = 0.6, 3\n",
     "n = 0.2\n",
     "k, g, muw, deltH = 10**(-12), 10, 10**(-3), 0.25\n",
-    "Triv = lambda t : 20 + 273.15\n",
-    "Tnap = lambda t : 10 + 273.15\n",
+    "Triv = lambda t : 20 + ZERO_CELSIUS\n",
+    "Tnap = lambda t : 10 + ZERO_CELSIUS\n",
     "\n",
     "CAM = CAMatrix2(N,h,rhow,rhos,cw,cs,g,lambs,lambw,n,k,muw,deltH,Triv,Tnap)\n",
     "\n",
