visualisation fonctions in column , exemple flows = col.get_flows_solve() unitLeg="m/s" title="Débits" col.plot_it_Zt(flows,title,unitLeg,1.04,2) Pb in demo_genData K is not accounted for

--- a/pyheatmy/demo2023.ipynb
+++ b/pyheatmy/demo2023.ipynb
@@ -293,7 +293,6 @@
    "outputs": [],
    "source": [
     "temperatures = col.get_temps_solve() - ZERO_CELSIUS\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(10, 5), facecolor = 'w')\n",
     "\n",
     "im = ax.imshow(\n",
@@ -316,9 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "flows = col.get_flows_solve()\n",
-    "col.plot_it_Zt(flows)"
+    "title=\"Températures en °C from col\"\n",
+    "col.plot_it_Zt(temperatures,title)"
    ]
   },
   {
@@ -350,6 +348,16 @@
     "ax.set_title(\"Débits en m/s\")\n",
     "plt.colorbar(im)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title=\"Débits en m/s from col\"\n",
+    "col.plot_it_Zt_2axes(flows,title)"
    ]
   },
   {
@@ -469,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
