--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,9 @@
     "\n",
     "\"\"\"Bruit de mesure\"\"\"\n",
     "sigma_meas_P = 0.05\n",
-    "sigma_meas_T = 0.1"
+    "sigma_meas_T = 0.1\n",
+    "\n",
+    "print(\"dt={0:.1f}s\".format(dt))"
    ]
   },
   {
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +148,8 @@
     "emu_observ_test_user1._generate_Temp_aq_series()\n",
     "emu_observ_test_user1._generate_T_riv_dH_series()\n",
     "emu_observ_test_user1._generate_Temp_riv_series()\n",
-    "emu_observ_test_user1._generate_Shaft_Temp_series()"
+    "emu_observ_test_user1._generate_Shaft_Temp_series()\n",
+    "emu_observ_test_user1._T_Shaft_measures\n"
    ]
   },
   {
@@ -160,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# l'utilisateur génère un dictionnaire avec les données importantes de la colonne\n",
     "name =\"Couche en sable\"\n",
     "zLow = 0.4\n",
-    "moinslog10K = 12\n",
+    "moinslog10K = 3\n",
     "n = 0.1\n",
     "lambda_s = 2 # test cas purement advectif\n",
     "rhos_cs = 4e6\n",
@@ -264,16 +267,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(col._temps[:,:3000], aspect='auto')\n",
-    "# on voit bien le déphasage mais a encore cette modulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "nt = len(col._temps[0,:])\n",
     "for i in range(1500):\n",
     "    plt.plot(col._temps[:,i]-ZERO_CELSIUS, -col._z_solve)\n",
@@ -289,39 +282,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(emu_observ_test_user1._T_Shaft[0]-ZERO_CELSIUS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user1._T_Shaft_measures"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nt = len(col._H_res[0,:])\n",
-    "for i in range(1000):\n",
-    "    plt.plot(col._H_res[:,i], -col._z_solve)\n",
-    "plt.ylabel(\"depth\")\n",
-    "plt.xlabel(\"H (m)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "flows = col.get_flows_solve()\n",
-    "col.plot_it_Zt(flows)"
+    "unitLeg=\"m/s\"\n",
+    "title=\"Débits\"\n",
+    "col.plot_it_Zt(flows,title,unitLeg,1.04,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temperatures = col.get_temps_solve()\n",
+    "unitLeg=\"°C\"\n",
+    "title=\"Températures\"\n",
+    "col.plot_it_Zt(temperatures,title,unitLeg)"
    ]
   },
   {
@@ -342,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
