Pyheatmy in core.py implementation of plot of temperature at sensors in the column class. creation of a periodic signal in utils.py. It is still bugged

--- a/pyheatmy/demo2023.ipynb
+++ b/pyheatmy/demo2023.ipynb
@@ -276,6 +276,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import os\n",
+    "col.print_in_file_processed_MOLONARI_dataset()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -284,6 +294,15 @@
     "**Attention : les paramètres utilisés étant arbitraires, les résultats peuvent ne pas avoir de sens physique.**\n",
     "\n",
     "On peut récupérer les températures calculées :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col.plot_temperature_at_sensors()"
    ]
   },
   {
@@ -357,7 +376,7 @@
    "outputs": [],
    "source": [
     "title=\"Débits en m/s from col\"\n",
-    "col.plot_it_Zt_2axes(flows,title)"
+    "col.plot_it_Zt(flows,title)"
    ]
   },
   {
@@ -477,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,9 +588,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DREAM MCMC Computation:  92%|█████████▏| 4575/5000 [02:32<00:14, 30.34it/s]"
+     ]
+    }
+   ],
    "source": [
     "priors_couche_1 = {\n",
     "    \"moinslog10K\": ((4+7, 9+7), .01), # (intervalle, sigma)\n",
@@ -657,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
