--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -131,15 +131,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "emu_observ_test_user1._generate_dates_series()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -163,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,14 +225,18 @@
    "outputs": [],
    "source": [
     "# les sorties des différents capteurs après passage dans le modèle direct\n",
-    "nt = 3000\n",
-    "plt.plot(emu_observ_test_user1._T_riv[:nt], label=\"Triv\")\n",
-    "n_sens = len(emu_observ_test_user1._T_Shaft[0])\n",
-    "for i in range(n_sens-1):\n",
-    "    plt.plot(emu_observ_test_user1._T_Shaft[:nt,i], label=\"T{}\".format(i+1))\n",
-    "plt.plot(emu_observ_test_user1._T_Shaft[:nt,n_sens-1], label=\"Taq\")\n",
-    "plt.legend()\n",
-    "plt.grid()\n",
+    "# nt = 3000\n",
+    "# plt.plot(emu_observ_test_user1._T_riv[:nt], label=\"Triv\")\n",
+    "# n_sens = len(emu_observ_test_user1._T_Shaft[0])\n",
+    "# for i in range(n_sens-1):\n",
+    "#     plt.plot(emu_observ_test_user1._T_Shaft[:nt,i], label=\"T{}\".format(i+1))\n",
+    "# plt.plot(emu_observ_test_user1._T_Shaft[:nt,n_sens-1], label=\"Taq\")\n",
+    "# plt.legend()\n",
+    "# plt.grid()\n",
+    "# plt.show()\n",
+    "\n",
+    "print(\"methode column verifiee\")\n",
+    "col.plot_temperature_at_sensors()\n",
     "\n",
     "# la valeur moyenne diminue (ce qui ne devrait pas arriver)"
    ]
@@ -328,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
