synthetic case generator works based on core.py and gen_test.py. demo_genData.ipynb is available in src/research. Few others ipynb need to be cleaned up

--- a/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_genData.ipynb
@@ -24,7 +24,9 @@
     "# démo gen_test\n",
     "from pyheatmy import *\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +121,15 @@
     "    \"sigma_meas_T\": sigma_meas_T, #float\n",
     "}\n",
     "# instanciation du simulateur de données\n",
-    "emu_observ_test_user1 = Time_series.from_dict(time_series_dict_user1)"
+    "emu_observ_test_user1 = Time_series.from_dict(time_series_dict_user1)\n",
+    "\n",
+    "print(\"Checking params time series\")\n",
+    "print(\"param_time_dates:\", emu_observ_test_user1._param_dates)\n",
+    "print(\"param_dH_signal:\", emu_observ_test_user1._param_dH)\n",
+    "print(\"param_T_riv_signal:\", emu_observ_test_user1._param_T_riv)\n",
+    "print(\"param_T_aq_signal:\", emu_observ_test_user1._param_T_aq)\n",
+    "print(\"sigma_meas_P:\", emu_observ_test_user1._sigma_P)\n",
+    "print(\"sigma_meas_T:\", emu_observ_test_user1._sigma_T)\n"
    ]
   },
   {
@@ -135,12 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emu_observ_test_user1._generate_dates_series()\n",
-    "emu_observ_test_user1._generate_Temp_aq_series()\n",
-    "emu_observ_test_user1._generate_T_riv_dH_series()\n",
-    "emu_observ_test_user1._generate_Temp_riv_series()\n",
-    "emu_observ_test_user1._generate_Shaft_Temp_series()\n",
-    "emu_observ_test_user1._T_Shaft_measures\n"
+    "emu_observ_test_user1._generate_all_series()\n",
+    "\n"
    ]
   },
   {
@@ -174,7 +180,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user1._T_riv_dH_measures,\n",
+    "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user1._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": None, #float\n",
     "    \"sigma_meas_T\": None, #float\n",
@@ -442,9 +448,9 @@
     "\n",
     "emu_observ_test_user4._generate_dates_series()\n",
     "emu_observ_test_user4._generate_Temp_aq_series()\n",
-    "emu_observ_test_user4._generate_T_riv_dH_series()\n",
     "emu_observ_test_user4._generate_Temp_riv_series()\n",
-    "emu_observ_test_user4._generate_Shaft_Temp_series()"
+    "emu_observ_test_user4._generate_Shaft_Temp_series()\n",
+    "emu_observ_test_user4._generate_all_series()"
    ]
   },
   {
@@ -466,7 +472,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user4._T_riv_dH_measures,\n",
+    "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user4._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": emu_observ_test_user4._sigma_P, #float\n",
     "    \"sigma_meas_T\": emu_observ_test_user4._sigma_T, #float\n",
