--- a/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_cas_test.ipynb
@@ -114,7 +114,7 @@
     "        time_series._generate_perturb_T_riv_dH_series()\n",
     "        time_series._generate_perturb_T_Shaft_Temp_series()\n",
     "    else :\n",
-    "        time_series._generate_T_riv_dH_series()\n",
+    "        time_series._generate_all_series()\n",
     "        time_series._generate_Shaft_Temp_series()\n",
     "\n",
     "    \"\"\"Colonne\"\"\"\n",
@@ -122,7 +122,7 @@
     "        \"river_bed\": 1., \n",
     "        \"depth_sensors\": depth_sensors,\n",
     "        \"offset\": .0,\n",
-    "        \"dH_measures\": time_series._T_riv_dH_measures,\n",
+    "        \"dH_measures\": time_series._molonariP_data,\n",
     "        \"T_measures\": time_series._T_Shaft_measures,\n",
     "        \"sigma_meas_P\": time_series._sigma_P, #float\n",
     "        \"sigma_meas_T\": time_series._sigma_T, #float\n",
@@ -183,7 +183,7 @@
     "        time_series._generate_perturb_T_riv_dH_series()\n",
     "        time_series._generate_perturb_T_Shaft_Temp_series()\n",
     "    else :\n",
-    "        time_series._generate_T_riv_dH_series()\n",
+    "        time_series._generate_all_series()\n",
     "        time_series._generate_Shaft_Temp_series()\n",
     "\n",
     "    \"\"\"Colonne\"\"\"\n",
@@ -191,7 +191,7 @@
     "        \"river_bed\": 1., \n",
     "        \"depth_sensors\": depth_sensors,\n",
     "        \"offset\": .0,\n",
-    "        \"dH_measures\": time_series._T_riv_dH_measures,\n",
+    "        \"dH_measures\": time_series._molonariP_data,\n",
     "        \"T_measures\": time_series._T_Shaft_measures,\n",
     "        \"sigma_meas_P\": time_series._sigma_P, #float\n",
     "        \"sigma_meas_T\": time_series._sigma_T, #float\n",
