--- a/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "print(emu_observ_test_user1._T_Shaft_measures)\n",
-    "print(emu_observ_test_user1._T_riv_dH_measures)"
+    "print(emu_observ_test_user1._molonariP_data)"
    ]
   },
   {
@@ -168,12 +168,12 @@
    "outputs": [],
    "source": [
     "#méthode de génération\n",
-    "emu_observ_test_user1._generate_T_riv_dH_series()\n",
+    "emu_observ_test_user1._generate_all_series()\n",
     "emu_observ_test_user1._generate_Shaft_Temp_series()\n",
     "\n",
     "# les attributs sont générés\n",
     "emu_observ_test_user1._T_Shaft_measures\n",
-    "emu_observ_test_user1._T_riv_dH_measures"
+    "emu_observ_test_user1._molonariP_data"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": [.25, .5, .75, 1], #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user1._T_riv_dH_measures,\n",
+    "    \"dH_measures\": emu_observ_test_user1._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user1._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": None, #float\n",
     "    \"sigma_meas_T\": None, #float\n",
@@ -457,7 +457,7 @@
     "\n",
     "emu_observ_test_user2._generate_dates_series()\n",
     "emu_observ_test_user2._generate_Temp_aq_series()\n",
-    "emu_observ_test_user2._generate_T_riv_dH_series()\n",
+    "emu_observ_test_user2._generate_all_series()\n",
     "emu_observ_test_user2._generate_Temp_riv_series()\n",
     "emu_observ_test_user2._generate_Shaft_Temp_series()"
    ]
@@ -481,7 +481,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user2._T_riv_dH_measures,\n",
+    "    \"dH_measures\": emu_observ_test_user2._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user2._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": emu_observ_test_user2._sigma_P, #float\n",
     "    \"sigma_meas_T\": emu_observ_test_user2._sigma_T, #float\n",
@@ -614,7 +614,7 @@
     "\n",
     "emu_observ_test_user4._generate_dates_series()\n",
     "emu_observ_test_user4._generate_Temp_aq_series()\n",
-    "emu_observ_test_user4._generate_T_riv_dH_series()\n",
+    "emu_observ_test_user4._generate_all_series()\n",
     "emu_observ_test_user4._generate_Temp_riv_series()\n",
     "emu_observ_test_user4._generate_Shaft_Temp_series()"
    ]
@@ -638,7 +638,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": emu_observ_test_user4._T_riv_dH_measures,\n",
+    "    \"dH_measures\": emu_observ_test_user4._molonariP_data,\n",
     "    \"T_measures\": emu_observ_test_user4._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": emu_observ_test_user4._sigma_P, #float\n",
     "    \"sigma_meas_T\": emu_observ_test_user4._sigma_T, #float\n",
