--- a/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
     "\t\"river_bed\": 1., \n",
     "    \"depth_sensors\": depth_sensors, #En vrai y aura une 4e valeur ici mais ca prendra en charge pareil\n",
     "\t\"offset\": .0,\n",
-    "    \"dH_measures\": time_series._T_riv_dH_measures,\n",
+    "    \"dH_measures\": time_series._molonariP_data,\n",
     "    \"T_measures\": time_series._T_Shaft_measures,\n",
     "    \"sigma_meas_P\": time_series._sigma_P, #float\n",
     "    \"sigma_meas_T\": time_series._sigma_T, #float\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
