refactoring temps replaced by temperatures when needed. This is a very boring refactoring but needed to avoid confusion. demo2023.ipynb still works as well as demo_genData.ipynb

--- a/pyheatmy/demo2023.ipynb
+++ b/pyheatmy/demo2023.ipynb
@@ -311,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temperatures = col.get_temps_solve() - ZERO_CELSIUS\n",
+    "temperatures = col.get_temperatures_solve() - ZERO_CELSIUS\n",
     "fig, ax = plt.subplots(figsize=(10, 5), facecolor = 'w')\n",
     "\n",
     "im = ax.imshow(\n",
@@ -474,7 +474,7 @@
     "for i, id in enumerate(col.get_id_sensors()):\n",
     "    axes[i].set_xlabel(\"Temps (j)\")\n",
     "    axes[i].plot(temps_en_jours, col._T_measures[:, i] - ZERO_CELSIUS, label=\"Mesures\")\n",
-    "    axes[i].plot(temps_en_jours, col.get_temps_solve()[id] - ZERO_CELSIUS, label=\"Modèle\")\n",
+    "    axes[i].plot(temps_en_jours, col.get_temperatures_solve()[id] - ZERO_CELSIUS, label=\"Modèle\")\n",
     "    axes[i].legend()\n",
     "    axes[i].set_title(f\"Capteur {i+1}\")\n",
     "\n",
@@ -704,7 +704,7 @@
     "for i, id in enumerate(col.get_id_sensors()):\n",
     "    axes[i].set_xlabel(\"Temps (j)\")\n",
     "    axes[i].plot(temps_en_jours, col._T_measures[:, i] - ZERO_CELSIUS, label=\"Mesures\")\n",
-    "    axes[i].plot(temps_en_jours, col.get_temps_solve()[id] - ZERO_CELSIUS, label=\"Modèle\")\n",
+    "    axes[i].plot(temps_en_jours, col.get_temperatures_solve()[id] - ZERO_CELSIUS, label=\"Modèle\")\n",
     "    axes[i].legend()\n",
     "    axes[i].set_title(f\"Capteur {i+1}\")\n",
     "\n",
@@ -749,7 +749,7 @@
     "axes[1, 0].set_ylabel(\"Débit en m/s\")\n",
     "\n",
     "for i, q in enumerate(col.get_quantiles()):\n",
-    "    axes[0, i].imshow(col.get_temps_quantile(q), aspect='auto', cmap='Spectral_r', extent=[0, temps_en_jours[-1], col._real_z[-1], col._real_z[0]])\n",
+    "    axes[0, i].imshow(col.get_temperatures_quantile(q), aspect='auto', cmap='Spectral_r', extent=[0, temps_en_jours[-1], col._real_z[-1], col._real_z[0]])\n",
     "    axes[0, i].set_title(f\"Quantile de température : {100*q} %\")\n",
     "\n",
     "    axes[1, i].imshow(col.get_flows_quantile(q), aspect='auto', cmap='Spectral_r', extent=[0, temps_en_jours[-1], col._real_z[-1], col._real_z[0]])\n",
@@ -779,7 +779,7 @@
     "    axes[i].set_xlabel(\"Temps (j)\")\n",
     "    axes[i].plot(temps_en_jours, col._T_measures[:, i] - ZERO_CELSIUS, label=\"Mesures\")\n",
     "    for q in col.get_quantiles():\n",
-    "        axes[i].plot(temps_en_jours, col.get_temps_quantile(q)[id] - ZERO_CELSIUS, label=f\"Quantile {q}\")\n",
+    "        axes[i].plot(temps_en_jours, col.get_temperatures_quantile(q)[id] - ZERO_CELSIUS, label=f\"Quantile {q}\")\n",
     "    axes[i].legend()\n",
     "    axes[i].set_title(f\"Capteur {i+1}\")\n",
     "\n",
