--- a/pyheatmy/pyheatmy/DREAM_v3.ipynb
+++ b/pyheatmy/pyheatmy/DREAM_v3.ipynb
@@ -240,7 +240,7 @@
     "dz = col._real_z[-1] / nb_cells\n",
     "_z_solve = dz / 2 + np.array([k * dz for k in range(nb_cells)])\n",
     "ind_ref = [np.argmin(np.abs(z - _z_solve)) for z in col._real_z[1:-1]]\n",
-    "temp_ref = col.get_temps_solve()[ind_ref]\n",
+    "temp_ref = col.get_temperatures_solve()[ind_ref]\n",
     "sigma2 = 1\n",
     "nb_layer = len(all_priors)\n",
     "col._states = list()\n",
@@ -330,7 +330,7 @@
     "#initialisation des chaines\n",
     "for i in range(nb_chain): \n",
     "    col.compute_solve_transi(convert_to_layer(name_layer, z_low, X[i]), nb_cells, verbose = False)\n",
-    "    _temp_act[i] = col.get_temps_solve()\n",
+    "    _temp_act[i] = col.get_temperatures_solve()\n",
     "    _energy[0][i] = compute_energy(_temp[0][i][ind_ref, :])"
    ]
   },
@@ -401,7 +401,7 @@
     "        \n",
     "        # Compute new temperature profile and energy\n",
     "        col.compute_solve_transi(convert_to_layer(name_layer, z_low, x_new), nb_cells, verbose=False)\n",
-    "        temp_new = col.get_temps_solve()\n",
+    "        temp_new = col.get_temperatures_solve()\n",
     "        energy_new = compute_energy(temp_new[ind_ref, :])\n",
     "        \n",
     "        # Compute acceptance probability\n",
@@ -490,7 +490,7 @@
     "        \n",
     "        # Compute new temperature profile and energy\n",
     "        col.compute_solve_transi(convert_to_layer(name_layer, z_low, x_new), nb_cells, verbose=False)\n",
-    "        temp_new = col.get_temps_solve()\n",
+    "        temp_new = col.get_temperatures_solve()\n",
     "        energy_new = compute_energy(temp_new[ind_ref, :])\n",
     "        \n",
     "        # Compute acceptance probability\n",
@@ -704,7 +704,7 @@
     "                self.compute_solve_transi(\n",
     "                    convert_to_layer(name_layer, z_low, x_new), nb_cells, verbose=False\n",
     "                )\n",
-    "                temp_new = self.get_temps_solve()\n",
+    "                temp_new = self.get_temperatures_solve()\n",
     "                energy_new = compute_energy(temp_new[ind_ref, :])\n",
     "\n",
     "                # Compute acceptance probability\n",
@@ -780,7 +780,7 @@
    "outputs": [],
    "source": [
     "quantile = np.array([0.05, 0.5, 0.95])\n",
-    "quantiles_temps = np.quantile(_temp, quantile, axis=0)"
+    "quantiles_temperatures = np.quantile(_temp, quantile, axis=0)"
    ]
   },
   {
@@ -796,8 +796,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Dimensions de quantiles_temps : \", quantiles_temps.shape, \" (nb_quantiles, nb_chain, n_cells, n_temps)\")\n",
-    "print(\"Dimensions de quantiles_temps : \", _temp.shape, \" (nb_iter, nb_chain, n_cells, n_temps)\")"
+    "print(\"Dimensions de quantiles_temperatures : \", quantiles_temperatures.shape, \" (nb_quantiles, nb_chain, n_cells, n_temperatures)\")\n",
+    "print(\"Dimensions de quantiles_temperatures : \", _temp.shape, \" (nb_iter, nb_chain, n_cells, n_temperatures)\")"
    ]
   },
   {
@@ -813,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Mémoire pour les quantiles de température : \", quantiles_temps.nbytes/1000000, \" Méga octets.\")\n",
+    "print(\"Mémoire pour les quantiles de température : \", quantiles_temperatures.nbytes/1000000, \" Méga octets.\")\n",
     "print(\"Mémoire pour les températures : \", _temp.nbytes/1000000000, \"Giga octets.\")"
    ]
   },
@@ -834,9 +834,9 @@
     "n_sous_ech_space = 4 # 1 mesure considérée tous les 2 cm\n",
     "\n",
     "_temp_sous_ech = _temp[:,:,::n_sous_ech_space,::n_sous_ech_temp]\n",
-    "quantiles_temps_sous_ech = np.quantile(_temp_sous_ech, quantile, axis=0)\n",
+    "quantiles_temperatures_sous_ech = np.quantile(_temp_sous_ech, quantile, axis=0)\n",
     "\n",
-    "np.allclose(quantiles_temps_sous_ech,  quantiles_temps[:, :, ::n_sous_ech_space, ::n_sous_ech_temp])"
+    "np.allclose(quantiles_temperatures_sous_ech,  quantiles_temperatures[:, :, ::n_sous_ech_space, ::n_sous_ech_temp])"
    ]
   },
   {
@@ -859,7 +859,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Mémoire pour les quantiles de température : \", quantiles_temps_sous_ech.nbytes/1000000, \" Méga octets.\")\n",
+    "print(\"Mémoire pour les quantiles de température : \", quantiles_temperatures_sous_ech.nbytes/1000000, \" Méga octets.\")\n",
     "print(\"Mémoire pour les températures : \", _temp_sous_ech.nbytes/1000000000, \"Giga octets.\")"
    ]
   },
@@ -955,7 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# quantiles_sous_ech_P2 = np.zeros(quantiles_temps.shape)\n",
+    "# quantiles_sous_ech_P2 = np.zeros(quantiles_temperatures.shape)\n",
     "# nb_cells_sous_ech = nb_cells // n_sous_ech_space\n",
     "# nb_times_sous_ech = _temp.shape[-1] // n_sous_ech_temp\n",
     "\n",
