--- a/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_gen_test.ipynb
@@ -314,8 +314,8 @@
    "outputs": [],
    "source": [
     "plt.plot(emu_observ_test_user1._T_riv, label=\"Triv\")\n",
-    "plt.plot(col._temps[0,:], label=\"T z=0.01m\")\n",
-    "plt.plot(col._temps[5,:], label=\"T z=0.03m\")\n",
+    "plt.plot(col._temperatures[0,:], label=\"T z=0.01m\")\n",
+    "plt.plot(col._temperatures[5,:], label=\"T z=0.03m\")\n",
     "plt.plot(emu_observ_test_user1._T_Shaft[:,0], label=\"T1 z=0.1m\")\n",
     "plt.legend()\n",
     "plt.ylabel(\"Température (°C)\")\n",
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(col._temps[:,:3000], aspect='auto')\n",
+    "plt.imshow(col._temperatures[:,:3000], aspect='auto')\n",
     "# on voit bien le déphasage mais a encore cette modulation"
    ]
   },
@@ -348,9 +348,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nt = len(col._temps[0,:])\n",
+    "nt = len(col._temperatures[0,:])\n",
     "for i in range(1500):\n",
-    "    plt.plot(col._temps[:,i]-ZERO_CELSIUS, -col._z_solve)\n",
+    "    plt.plot(col._temperatures[:,i]-ZERO_CELSIUS, -col._z_solve)\n",
     "plt.ylabel(\"depth\")\n",
     "plt.xlabel(\"T (°C)\")\n",
     "plt.grid()\n",
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "col._temps[:,0]-ZERO_CELSIUS"
+    "col._temperatures[:,0]-ZERO_CELSIUS"
    ]
   },
   {
@@ -695,9 +695,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nt = len(col4._temps[0,:])\n",
+    "nt = len(col4._temperatures[0,:])\n",
     "for i in range(1000,2000):\n",
-    "    plt.plot(col4._temps[:,i], -col._z_solve)\n",
+    "    plt.plot(col4._temperatures[:,i], -col._z_solve)\n",
     "plt.ylabel(\"depth\")\n",
     "plt.xlabel(\"T (°C)\")\n",
     "plt.grid()\n",
@@ -710,7 +710,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(col._temps[:,:], aspect='auto')"
+    "plt.imshow(col._temperatures[:,:], aspect='auto')"
    ]
   }
  ],
