--- a/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
+++ b/pyheatmy/research/synthetic_cases_generator/demo_val_direct.ipynb
@@ -212,7 +212,7 @@
     "t_obs = 0\n",
     "\n",
     "plt.plot(analy_sol_exp.analy_temp_cond[:,t_obs],-analy_sol_exp._z_solve, label='Analy')\n",
-    "plt.plot(colonne_exp.temps_solve[:,t_obs],-analy_sol_exp._z_solve, label='MD')\n",
+    "plt.plot(colonne_exp.temperaturesraturesraturesratures_solve[:,t_obs],-analy_sol_exp._z_solve, label='MD')\n",
     "plt.plot(time_series._T_Shaft[t_obs],-np.array(colonne_exp.depth_sensors), marker='o',label='Tshaft variable')\n",
     "plt.legend()\n",
     "plt.grid()\n",
@@ -251,7 +251,7 @@
     "def animate(frame_number):\n",
     "    axis.set_title(\"Profils de températures à t={}\".format(frame_number))\n",
     "    line1.set_xdata(analy_sol_exp.analy_temp_cond[:,frame_number])\n",
-    "    line2.set_xdata(colonne_exp.temps_solve[:,frame_number])\n",
+    "    line2.set_xdata(colonne_exp.temperatures_solve[:,frame_number])\n",
     "    line3.set_xdata(time_series._T_Shaft[frame_number])\n",
     "    return line1,line2,line3,\n",
     "\n",
